[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/BG/Transition.png" type="Texture" id=1]
[ext_resource path="res://src/MapObjects/Transition.gd" type="Script" id=2]

[node name="Transition" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TransitionTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 4956.0
margin_top = -8.0
margin_right = 5956.0
margin_bottom = 992.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 500, 500 )
texture = ExtResource( 1 )

[node name="TransitionBottom" type="ColorRect" parent="."]
margin_left = -2116.0
margin_top = 300.0
margin_right = -1256.0
margin_bottom = 916.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )

[node name="TransitionTop" type="ColorRect" parent="."]
margin_left = 1080.0
margin_top = 504.0
margin_right = 1920.0
margin_bottom = 1104.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )

[node name="TransitionLeft" type="ColorRect" parent="."]
margin_left = 1404.0
margin_top = -1784.0
margin_right = 2264.0
margin_bottom = -1168.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )

[node name="TransitionRight" type="ColorRect" parent="."]
margin_left = -1716.0
margin_top = -1388.0
margin_right = -856.0
margin_bottom = -772.0
rect_scale = Vector2( 1e-05, 1e-05 )
color = Color( 0, 0, 0, 1 )
